unpackaged/main/default/objects/ffirule__IntegrationRuleAction__c/ffirule__IntegrationRuleAction__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationruleaction</customHelpPage>
    <label>ClickLink Action</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>