unpackaged/main/default/objects/ffirule__IntegrationRuleAction__c/fields/ffirule__ActionName__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ActionName__c</fullName>
    <label>Action Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>