unpackaged/main/default/objects/ffirule__IntegrationRuleAction__c/fields/ffirule__FeedLinkMessage__c.field-meta.xml
<CustomField>
    <fullName>ffirule__FeedLinkMessage__c</fullName>
    <label>Feed Link Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>