unpackaged/main/default/objects/ffirule__IntegrationRuleAction__c/fields/ffirule__FeedLinkMessageTargetField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__FeedLinkMessageTargetField__c</fullName>
    <label>Feed Link Message Target Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>