unpackaged/main/default/objects/ffirule__IntegrationRuleAction__c/fields/ffirule__FeedMessage__c.field-meta.xml
<CustomField>
    <fullName>ffirule__FeedMessage__c</fullName>
    <label>Feed Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>