unpackaged/main/default/objects/ffirule__IntegrationRuleAction__c/fields/ffirule__FeedMessageTargetField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__FeedMessageTargetField__c</fullName>
    <label>Feed Message Target Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>