unpackaged/main/default/objects/ffirule__IntegrationRuleAction__c/fields/ffirule__VisualForce__c.field-meta.xml
<CustomField>
    <fullName>ffirule__VisualForce__c</fullName>
    <formula>'&lt;apex:page standardController="' + ffirule__IntegrationRule__r.ffirule__SourceObject__c + '" extensions="ffirule.IntegrationRuleEngine" docType="html-5.0" standardStylesheets="false" showheader="false" sidebar="false"&gt;'+ BR() +
'&lt;apex:variable var="sourceId" value="' + '{' + '!' + ffirule__IntegrationRule__r.ffirule__SourceObject__c + '.Id}"/&gt;' + BR()
 +'&lt;ffirule:IntegrationRule engine="'+'{'+'!'+'engine'+'}'+'" actionName="' + ffirule__ActionName__c + '"  sourceId="'+'{'+'!'+'sourceId'+'}'+'"/&gt;'+ BR() + '&lt;/apex:page&gt;'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VisualForce</label>
    <type>Text</type>
</CustomField>